--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,8 +4,8 @@ on: workflow_dispatch
 
 env:
   GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-  project: ${{ secrets.TF_VAR_PROJECT }}
-  bucket: ${{ secrets.TF_VAR_BUCKET }}
+  TF_VAR_project: ${{ secrets.TF_VAR_PROJECT }}
+  TF_VAR_bucket: ${{ secrets.TF_VAR_BUCKET }}
 
 jobs:
   terraform:
