--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,5 +24,5 @@ jobs:
         run: terraform init
       - name: Terraform plan
         run: terraform plan
-#      - name: Terraform apply
-#        run: terraform apply -auto-aprove -input=false
+      - name: Terraform apply
+        run: terraform apply -auto-aprove -input=false
