--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Terraform plan
         run: terraform plan
       - name: Terraform apply
-        run: terraform apply -auto-aprove -input=false
+        run: terraform apply -auto-aprove
